--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ p{
 	text-align: center;
 }
 .raya{
+
 	border-bottom: solid #000 1px;
 	margin: 40px;
 	width: 60px;
@@ -33,21 +34,48 @@ p{
 .profile{
 	display:inline;
 	margin:10px;
+	width: 200px;
+	height:auto;
 }
 .separacion{
 	border-right:solid #000 1px;
 	margin-left: 5px;
 	padding-right: 5px;
 }
-img{
-    width:200px;
-	height: 200px;
-}
 .burbuja{
 	border-radius: 100%;
 	position:relative;
 	left:250px;
+    width:200px;
+    height:200px;
 }
 h1{
 	text-align: center;
+}
+.html{
+	width:400px;
+	height:auto;
+	background: #666;
+	font: #fff;
+	padding:3px;
+	margin:15px;
+}
+.css{
+	width:300px;
+	height:auto;
+	background:#666;
+	padding:3px;
+	margin:15px; 
+}
+.js{
+	width:150px;
+	height:auto;
+	background:#666;
+	padding: 1px;
+	margin:15px;
+}
+.barra{
+	text-align: left;
+	padding-left: 5px;
+	color: #fff;
 }
